[package]

name = "mycurl"
version = "0.1.1"
authors = ["Carl Lerche <me@carllerche.com>"]
license = "MIT"
repository = "https://github.com/carllerche/curl-rust"
description = "Rust bindings to libcurl for making HTTP requests"

[dependencies]
url = "0.2.0"
log = "0.3.0"
libc = "0.2"
curl = "0.2.16"


[[bin]]
name = "bsp2"
path = "src/bsp2.rs"

